--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ Russian Salad | Chicken Hawaian Salad | Prawn Cocktail | Green Salad | Waldrof S
                             <div class="single-post-area d-flex">
                                 <!-- Blog Thumbnail -->
                                 <div class="blog-thumbnail">
-                                    <img src="img/bg-img/12.jpg" alt="">
+                                    <img src="img/bg-img/side1.jpg" alt="">
                                 </div>
                                 <!-- Blog Content -->
                                 <div class="blog-content">
@@ -520,7 +520,7 @@ Russian Salad | Chicken Hawaian Salad | Prawn Cocktail | Green Salad | Waldrof S
                             <div class="single-post-area d-flex mb-30">
                                 <!-- Blog Thumbnail -->
                                 <div class="blog-thumbnail">
-                                    <img src="img/bg-img/13.jpg" alt="">
+                                    <img src="img/bg-img/side2.jpg" alt="">
                                 </div>
                                 <!-- Blog Content -->
                                 <div class="blog-content">
@@ -533,7 +533,7 @@ Russian Salad | Chicken Hawaian Salad | Prawn Cocktail | Green Salad | Waldrof S
                             <div class="single-post-area d-flex">
                                 <!-- Blog Thumbnail -->
                                 <div class="blog-thumbnail">
-                                    <img src="img/bg-img/14.jpg" alt="">
+                                    <img src="img/bg-img/side3.jpg" alt="">
                                 </div>
                                 <!-- Blog Content -->
                                 <div class="blog-content">
@@ -546,7 +546,7 @@ Russian Salad | Chicken Hawaian Salad | Prawn Cocktail | Green Salad | Waldrof S
                             <div class="single-post-area d-flex">
                                 <!-- Blog Thumbnail -->
                                 <div class="blog-thumbnail">
-                                    <img src="img/bg-img/15.jpg" alt="">
+                                    <img src="img/bg-img/side4.jpg" alt="">
                                 </div>
                                 <!-- Blog Content -->
                                 <div class="blog-content">
@@ -559,7 +559,7 @@ Russian Salad | Chicken Hawaian Salad | Prawn Cocktail | Green Salad | Waldrof S
                             <div class="single-post-area d-flex">
                                 <!-- Blog Thumbnail -->
                                 <div class="blog-thumbnail">
-                                    <img src="img/bg-img/16.jpg" alt="">
+                                    <img src="img/bg-img/side5.jpg" alt="">
                                 </div>
                                 <!-- Blog Content -->
                                 <div class="blog-content">
@@ -571,7 +571,7 @@ Russian Salad | Chicken Hawaian Salad | Prawn Cocktail | Green Salad | Waldrof S
 							<div class="single-post-area d-flex">
                                 <!-- Blog Thumbnail -->
                                 <div class="blog-thumbnail">
-                                    <img src="img/bg-img/17.jpg" alt="">
+                                    <img src="img/bg-img/side6.jpg" alt="">
                                 </div>
                                 <!-- Blog Content -->
                                 <div class="blog-content">
@@ -584,7 +584,7 @@ Russian Salad | Chicken Hawaian Salad | Prawn Cocktail | Green Salad | Waldrof S
 							<div class="single-post-area d-flex">
                                 <!-- Blog Thumbnail -->
                                 <div class="blog-thumbnail">
-                                    <img src="img/bg-img/18.jpg" alt="">
+                                    <img src="img/bg-img/side7.jpg" alt="">
                                 </div>
                                 <!-- Blog Content -->
                                 <div class="blog-content">
@@ -597,7 +597,7 @@ Russian Salad | Chicken Hawaian Salad | Prawn Cocktail | Green Salad | Waldrof S
 							<div class="single-post-area d-flex">
                                 <!-- Blog Thumbnail -->
                                 <div class="blog-thumbnail">
-                                    <img src="img/bg-img/19.jpg" alt="">
+                                    <img src="img/bg-img/side10.jpg" alt="">
                                 </div>
                                 <!-- Blog Content -->
                                 <div class="blog-content">
