--- a/our_delicacies.html
+++ b/our_delicacies.html
@@ -244,7 +244,7 @@
                 <!-- Single Post Catagory -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/4.jpg" alt="">
+                        <img src="img/bg-img/side1.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
@@ -258,7 +258,7 @@
                 <!-- Single Post Catagory -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/5.jpg" alt="">
+                        <img src="img/bg-img/side2.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
@@ -271,7 +271,7 @@
                 <!-- Single Post Catagory -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/6.jpg" alt="">
+                        <img src="img/bg-img/side3.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
@@ -284,7 +284,7 @@
                 <!-- Single Post Catagory -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/17.jpg" alt="">
+                        <img src="img/bg-img/side4.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
@@ -297,7 +297,7 @@
                 <!-- Single Post Catagory -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/18.jpg" alt="">
+                        <img src="img/bg-img/side5.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
@@ -310,7 +310,7 @@
                 <!-- Single Post Catagory -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/19.jpg" alt="">
+                        <img src="img/bg-img/side6.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
@@ -323,7 +323,7 @@
                 <!-- Single Post Catagory -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/20.jpg" alt="">
+                        <img src="img/bg-img/side7.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
@@ -336,7 +336,7 @@
                 <!-- Single Post Catagory -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/21.jpg" alt="">
+                        <img src="img/bg-img/side8.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
@@ -347,7 +347,7 @@
                 </div>
 				<div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/12.jpg" alt="">
+                        <img src="img/bg-img/side9.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
@@ -358,7 +358,7 @@
                 </div>
 				<div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/6.jpg" alt="">
+                        <img src="img/bg-img/side10.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
@@ -369,7 +369,7 @@
                 </div>
 				<div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/5.jpg" alt="">
+                        <img src="img/bg-img/side11.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
@@ -380,7 +380,7 @@
                 </div>
 				<div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/1.jpg" alt="">
+                        <img src="img/bg-img/side12.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
@@ -393,7 +393,7 @@
                 <!-- Single Post Catagory -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-post-catagory mb-30">
-                        <img src="img/bg-img/2.jpg" alt="">
+                        <img src="img/bg-img/side13.jpg" alt="">
                         <!-- Content -->
                         <div class="catagory-content-bg">
                             <div class="catagory-content">
