--- a/our_package.html
+++ b/our_package.html
@@ -587,6 +587,81 @@ Russian Salad | Chicken Hawaian Salad | Prawn Cocktail | Green Salad | Waldrof S
     <!-- ##### Instagram Area Start ##### -->
     
     <!-- ##### Instagram Area End ##### -->
+	<br><br>
+<center><h2>Approximate Price of our Packages</h2></center>
+	<br><br>
+    <!-- ##### Instagram Area Start ##### -->
+    <div class="instagram-feed-area d-flex flex-wrap">
+        <!-- Single Instagram -->
+        <div class="single-instagram">
+            <img src="img/bg-img/pkeg1.jpeg" alt="">
+            <!-- Image Zoom -->
+            <a href="img/bg-img/pkeg1.jpeg" class="img-zoom">+</a>
+        </div>
+
+        <!-- Single Instagram -->
+        <div class="single-instagram">
+            <img src="img/bg-img/pkeg2.jpeg" alt="">
+            <!-- Image Zoom -->
+            <a href="img/bg-img/pkeg2.jpeg" class="img-zoom"  >+</a>
+        </div>
+
+        <!-- Single Instagram -->
+        <div class="single-instagram">
+            <img src="img/bg-img/pkeg3.jpeg" alt="">
+            <!-- Image Zoom -->
+            <a href="img/bg-img/pkeg3.jpeg" class="img-zoom"  >+</a>
+        </div>
+
+        <!-- Single Instagram -->
+        <div class="single-instagram">
+            <img src="img/bg-img/pkeg4.jpeg" alt="">
+            <!-- Image Zoom -->
+            <a href="img/bg-img/pkeg4.jpeg" class="img-zoom"  >+</a>
+        </div>
+
+        <!-- Single Instagram -->
+        <div class="single-instagram">
+            <img src="img/bg-img/pkeg5.jpeg" alt="">
+            <!-- Image Zoom -->
+            <a href="img/bg-img/pkeg5.jpeg" class="img-zoom"  >+</a>
+        </div>
+
+        <!-- Single Instagram -->
+        <div class="single-instagram">
+            <img src="img/bg-img/pkeg6.jpeg" alt="">
+            <!-- Image Zoom -->
+            <a href="img/bg-img/pkeg6.jpeg" class="img-zoom"  >+</a>
+        </div>
+
+        <!-- Single Instagram -->
+        <div class="single-instagram">
+            <img src="img/bg-img/pkeg7.jpeg" alt="">
+            <!-- Image Zoom -->
+            <a href="img/bg-img/pkeg7.jpeg" class="img-zoom"  >+</a>
+        </div>
+
+        <!-- Single Instagram -->
+        <div class="single-instagram">
+            <img src="img/bg-img/pkeg8.jpeg" alt="">
+            <!-- Image Zoom -->
+            <a href="img/bg-img/pkeg8.jpeg" class="img-zoom"  >+</a>
+        </div>
+
+        <!-- Single Instagram -->
+        <div class="single-instagram">
+            <img src="img/bg-img/pkeg9.jpeg" alt="">
+            <!-- Image Zoom -->
+            <a href="img/bg-img/pkeg9.jpeg" class="img-zoom"  >+</a>
+        </div>
+
+        <!-- Single Instagram -->
+        <div class="single-instagram">
+            <img src="img/bg-img/pkeg10.jpeg" alt="">
+            <!-- Image Zoom -->
+            <a href="img/bg-img/pkeg10.jpeg" class="img-zoom"  >+</a>
+        </div>
+    </div>
 
     <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area">
